# wc

./: .gitignore  Cargo.toml  README.md  REAMDE.md  criterion.toml  tarpaulin.toml
benches/: wc_benchmark.rs
scripts/benchmark/: benchmark.sh
scripts/benchmark/data/: 100.txt  200.txt  500.txt  700.txt  900.txt
src/: lib.rs  main.rs  models.rs  parser.rs
tests/: wc.rs
