[package]
name = "wc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
clap = { version = "4.5.1", features = ["derive"] }

[lib]
name = "wc"
path = "src/lib.rs"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "wc_benchmark"
harness = false
